--- a/index.html
+++ b/index.html
@@ -110,25 +110,36 @@
     <h2 id="modalTitle" class="text-3xl font-semibold mb-6 text-center">Login</h2>
 
     <form id="authForm" class="space-y-4">
-      <input type="text" id="username" placeholder="Username"
-        class="w-full px-5 py-3 rounded-xl bg-black bg-opacity-20 border border-white/30 
-        text-white placeholder-white/60 focus:outline-none focus:bg-opacity-30 
-        focus:border-blue-400" required />
+      
+      <!-- Username -->
+      <div class="relative">
+        <i class="ri-user-line absolute left-4 top-1/2 -translate-y-1/2 text-white/70 text-xl pointer-events-none"></i>
+        <input type="text" id="username" placeholder="Username"
+          class="w-full pl-12 pr-4 py-3 rounded-xl bg-black bg-opacity-20 border border-white/30 
+          text-white placeholder-white/60 focus:outline-none focus:bg-opacity-30 focus:border-blue-400" required />
+      </div>
 
+      <!-- Email (hidden by default) -->
       <input type="email" id="email" placeholder="Email"
         class="w-full px-5 py-3 rounded-xl bg-black bg-opacity-20 border border-white/30 
-        text-white placeholder-white/60 focus:outline-none focus:bg-opacity-30 
-        focus:border-blue-400 hidden" />
+        text-white placeholder-white/60 focus:outline-none focus:bg-opacity-30 focus:border-blue-400 hidden" />
 
-      <input type="password" id="password" placeholder="Password"
-        class="w-full px-5 py-3 rounded-xl bg-black bg-opacity-20 border border-white/30 
-        text-white placeholder-white/60 focus:outline-none focus:bg-opacity-30 
-        focus:border-blue-400" required />
+      <!-- Password -->
+      <div class="relative">
+        <i class="ri-lock-line absolute left-4 top-1/2 -translate-y-1/2 text-white/70 text-xl pointer-events-none"></i>
+        <input type="password" id="password" placeholder="Password"
+          class="w-full pl-12 pr-12 py-3 rounded-xl bg-black bg-opacity-20 border border-white/30 
+          text-white placeholder-white/60 focus:outline-none focus:bg-opacity-30 focus:border-blue-400" required />
+        <button type="button" id="togglePassword" 
+          class="absolute right-4 top-1/2 -translate-y-1/2 text-white/70 hover:text-white focus:outline-none">
+          <i id="eyeIcon" class="ri-eye-line text-xl"></i>
+        </button>
+      </div>
 
+      <!-- Confirm Password (hidden by default) -->
       <input type="password" id="confirmPassword" placeholder="Confirm Password"
         class="w-full px-5 py-3 rounded-xl bg-black bg-opacity-20 border border-white/30 
-        text-white placeholder-white/60 focus:outline-none focus:bg-opacity-30 
-        focus:border-blue-400 hidden" />
+        text-white placeholder-white/60 focus:outline-none focus:bg-opacity-30 focus:border-blue-400 hidden" />
 
       <div class="flex justify-between items-center">
         <button type="submit" id="submitBtn"
@@ -141,10 +152,10 @@
       </div>
     </form>
 
-<div class="flex justify-end mt-4">
-<button id="closeModalBtn" class="px-6 py-3 rounded-xl bg-red-800 hover:bg-red-700 transition font-semibold text-white flex items-center gap-2">
-  <i class="ri-close-line"></i> Tutup
-</button>
+    <div class="flex justify-end mt-4">
+      <button id="closeModalBtn" class="px-6 py-3 rounded-xl bg-red-800 hover:bg-red-700 transition font-semibold text-white flex items-center gap-2">
+        <i class="ri-close-line"></i> Tutup
+      </button>
 
 </div>
 
@@ -218,6 +229,17 @@
 </div>
 
 <script>
+  const togglePassword = document.getElementById('togglePassword');
+  const passwordInput = document.getElementById('password');
+  const eyeIcon = document.getElementById('eyeIcon');
+
+  togglePassword.addEventListener('click', () => {
+    const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
+    passwordInput.setAttribute('type', type);
+    eyeIcon.className = type === 'password' ? 'ri-eye-line text-xl' : 'ri-eye-off-line text-xl';
+  });
+
+
   const container = document.getElementById('product-container');
   const cartCount = document.getElementById('cart-count');
 
