--- a/checkout.html
+++ b/checkout.html
@@ -36,16 +36,96 @@
 <main class="flex-1 p-4 space-y-4" id="checkout-list"></main>
 
 <section class="bg-white p-4 shadow-md rounded-t-xl">
+
+<!-- Form Pembayaran -->
+<div class="space-y-4 mb-6">
+
+  <!-- Nama -->
+  <div class="relative">
+    <i class="ri-user-line absolute left-3 top-1/2 -translate-y-1/2 text-gray-400 text-lg"></i>
+    <input type="text" id="name" placeholder="Nama Lengkap" required
+      class="w-full border pl-10 pr-4 py-2 rounded-md text-black font-semibold focus:outline-none focus:ring-2 focus:ring-blue-400" />
+  </div>
+
+  <!-- Alamat -->
+  <div class="relative">
+    <i class="ri-map-pin-line absolute left-3 top-3 text-gray-400 text-lg"></i>
+    <textarea id="address" rows="3" placeholder="Alamat Lengkap" required
+      class="w-full border pl-10 pr-4 py-2 rounded-md text-black font-semibold focus:outline-none focus:ring-2 focus:ring-blue-400 resize-none"></textarea>
+  </div>
+
+  <!-- Nomor HP -->
+  <div class="relative">
+    <i class="ri-phone-line absolute left-3 top-1/2 -translate-y-1/2 text-gray-400 text-lg"></i>
+    <input type="tel" id="phone" placeholder="Nomor HP / WhatsApp" required
+      class="w-full border pl-10 pr-4 py-2 rounded-md text-black font-semibold focus:outline-none focus:ring-2 focus:ring-blue-400" />
+  </div>
+
+  <!-- Metode Pembayaran -->
+  <div class="relative">
+    <i class="ri-wallet-3-line absolute left-3 top-1/2 -translate-y-1/2 text-gray-400 text-lg"></i>
+    <select id="payment-method"
+      class="w-full border pl-10 pr-4 py-2 rounded-md text-black font-semibold focus:outline-none focus:ring-2 focus:ring-blue-400">
+      <option value="">Pilih Metode Pembayaran</option>
+      <option value="transfer">Transfer Bank</option>
+      <option value="cod">Cash on Delivery</option>
+      <option value="qris">QRIS</option>
+    </select>
+  </div>
+
+
   <div class="flex justify-between text-lg font-semibold mb-4">
     <span>Total</span>
     <span id="total-price">Rp0</span>
   </div>
+
   <button id="pay-btn" class="bg-green-500 hover:bg-green-600 text-white font-semibold py-2 px-6 rounded-md transition duration-300 w-full mb-14">
     Bayar Sekarang
   </button>
+
+
 </section>
 
 <script>
+document.getElementById("pay-btn").addEventListener("click", () => {
+  if (cart.length === 0) {
+    alert("Keranjang kosong.");
+    return;
+  }
+
+  const name = document.getElementById("name").value.trim();
+  const address = document.getElementById("address").value.trim();
+  const phone = document.getElementById("phone").value.trim();
+  const method = document.getElementById("payment-method").value;
+  const note = document.getElementById("note").value.trim();
+
+  if (!name || !address || !phone || !method) {
+    alert("Mohon lengkapi semua data pembayaran.");
+    return;
+  }
+
+  const history = JSON.parse(localStorage.getItem("history")) || [];
+  history.push({
+    items: cart,
+    total: totalPriceElement.textContent,
+    time: new Date().toLocaleString(),
+    status: "Belum Dibayar",
+    customer: {
+      name,
+      address,
+      phone,
+      method,
+      note
+    }
+  });
+
+  localStorage.setItem("history", JSON.stringify(history));
+  localStorage.removeItem("checkout");
+  alert("Pesanan berhasil disimpan. Kami akan menghubungi Anda segera.");
+  window.location.href = "index.html";
+});
+
+
   let cart = JSON.parse(localStorage.getItem('checkout')) || [];
   const checkoutList = document.getElementById('checkout-list');
   const totalPriceElement = document.getElementById('total-price');
