--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>meja ruang tamu</title>
+  <title>dzulfikar</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -120,10 +120,17 @@
       </div>
 
       <!-- Email (hidden by default) -->
-      <input type="email" id="email" placeholder="Email"
-        class="w-full px-5 py-3 rounded-xl bg-black bg-opacity-20 border border-white/30 
-        text-white placeholder-white/60 focus:outline-none focus:bg-opacity-30 focus:border-blue-400 hidden" />
-
+ <!-- Email -->
+      <div class="relative input-container">
+        <i class="ri-mail-line absolute left-4 top-7 -translate-y-1/2 text-white/70 text-xl pointer-events-none"></i>
+        <input
+          type="email"
+          id="email"
+          placeholder="Email"
+          class="w-full pl-12 pr-12 mb-6 py-3 rounded-xl bg-black bg-opacity-20 border border-white/30
+                 text-white placeholder-white/60 focus:outline-none focus:bg-opacity-30 focus:border-blue-400"
+        />
+      </div>
       <!-- Password -->
       <div class="relative">
         <i class="ri-lock-line absolute left-4 top-1/2 -translate-y-1/2 text-white/70 text-xl pointer-events-none"></i>
