--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-blue-100">
+<body class="bg-white-100">
 
 <!-- Navbar -->
 <nav class="text-white px-4 py-3 h-14 flex items-center justify-center sticky top-0 z-10 relative bg-black">
