--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>meja ruang tamu</title>
+  <title>dzulfikar</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,26 +12,31 @@
 <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-white-100">
+<body class="bg-blue-100">
 
 <!-- Navbar -->
 <nav class="text-white px-4 py-3 h-14 flex items-center justify-center sticky top-0 z-10 relative bg-black">
   <div class="absolute left-4 top-1/2 -translate-y-1/2 flex items-center space-x-4">
-    <!-- Instagram paling kiri -->
-    <a href="https://instagram.com/rhanray_" target="_blank" class="text-3xl hover:text-gray-300 hover:scale-110 transition instagram-icon">
-      <i class="ri-instagram-line"></i>
-    </a>
-    <a href="https://wa.me/6282197770219" target="_blank" class="text-3xl hover:text-green-600 hover:scale-110 transition" style="color: #25D366;">
-      <i class="ri-whatsapp-line"></i>
-    </a>
-    <!-- User button di samping WhatsApp -->
+    <!-- User paling kiri -->
     <button id="userBtn" class="text-3xl hover:text-gray-300 hover:scale-110 transition" aria-label="User account">
       <i class="ri-user-line"></i>
     </button>
+    <!-- WhatsApp tetap di tengah -->
+    <a href="https://wa.me/6282197770219" target="_blank" class="text-3xl hover:text-green-600 hover:scale-110 transition" style="color: #25D366;">
+      <i class="ri-whatsapp-line"></i>
+    </a>
+    <!-- Instagram setelah WhatsApp -->
+    <a href="https://instagram.com/rhanray_" target="_blank" class="text-3xl hover:text-gray-300 hover:scale-110 transition instagram-icon">
+      <i class="ri-instagram-line"></i>
+    </a>
   </div>
-<div id="logo" class="logo-font neon-glow text-1xxl font-bold select-none ml-20">
-  dzulfikar
-</div>
+
+  <!-- Logo di tengah -->
+  <div id="logo" class="logo-font neon-glow text-1xxl font-bold select-none ml-20">
+    dzulfikar
+  </div>
+
+  <!-- Keranjang di kanan -->
   <div class="absolute right-4 top-1/2 -translate-y-1/2 flex items-center space-x-4">
     <a href="checkout.html" class="relative text-3xl hover:text-gray-300 hover:scale-110 transition" aria-label="Shopping cart">
       <i class="ri-shopping-cart-line"></i>
