--- a/checkout.html
+++ b/checkout.html
@@ -6,6 +6,7 @@
   <title>Checkout</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
+   <link rel="stylesheet" href="style.css" />
   <style>
       @keyframes belokKiriLoop {
     0% { transform: translateX(0); }
@@ -26,10 +27,11 @@
 <!-- Header -->
 <header class="bg-white p-4 shadow-md flex items-center justify-between">
   <h1 class="text-xl font-bold">Checkout</h1>
-  <a href="index.html" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-md shadow-md flex items-center gap-2">
-    <i class="ri-arrow-left-line text-xl belok-loop"></i>
-    <span>Kembali</span>
-  </a>
+<a href="index.html" class="btn-kembali">
+  <i class="ri-arrow-left-line text-xl belok-loop"></i>
+  <span>Kembali</span>
+</a>
+
 </header>
 
 <!-- Konten lainnya... -->
