--- a/checkout.html
+++ b/checkout.html
@@ -27,11 +27,10 @@
 <!-- Header -->
 <header class="bg-white p-4 shadow-md flex items-center justify-between">
   <h1 class="text-xl font-bold">Checkout</h1>
-<a href="index.html" class="btn-kembali">
+<a onclick="window.history.back()" class="btn-kembali cursor-pointer flex items-center gap-2">
   <i class="ri-arrow-left-line text-xl belok-loop"></i>
   <span>Kembali</span>
 </a>
-
 </header>
 
 <!-- Konten lainnya... -->
