--- a/index.html
+++ b/index.html
@@ -8,39 +8,47 @@
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nosifer&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Teko:wght@300..700&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body class="bg-white-100">
 
 <!-- Navbar -->
-<nav class="text-white px-4 py-3 h-14 flex items-center justify-center sticky top-0 z-10 relative bg-black">
-  <div class="absolute left-4 top-1/2 -translate-y-1/2 flex items-center space-x-4">
-    <!-- User paling kiri -->
+<nav class="relative text-white px-4 py-3 h-14 flex items-center justify-center bg-black sticky top-0 z-10">
+
+  <!-- User paling kiri -->
+  <div class="absolute left-4 top-1/2 -translate-y-1/2">
     <button id="userBtn" class="text-3xl hover:text-gray-300 hover:scale-110 transition" aria-label="User account">
       <i class="ri-user-line"></i>
     </button>
-    <!-- WhatsApp tetap di tengah -->
-    <a href="https://wa.me/6282197770219" target="_blank" class="text-3xl hover:text-green-600 hover:scale-110 transition" style="color: #25D366;">
-      <i class="ri-whatsapp-line"></i>
-    </a>
-    <!-- Instagram setelah WhatsApp -->
-    <a href="https://instagram.com/rhanray_" target="_blank" class="text-3xl hover:text-gray-300 hover:scale-110 transition instagram-icon">
-      <i class="ri-instagram-line"></i>
-    </a>
   </div>
 
   <!-- Logo di tengah -->
-  <div id="logo" class="logo-font neon-glow text-1xxl font-bold select-none ml-20">
-    dzulfikar
+<div class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2">
+  <div id="logo" class="logo-font text-2xl font-bold select-none flex space-x-1">
+    <span class="ray-text">R</span>
+    <span class="ray-text">A</span>
+    <span class="ray-text">Y</span>
+      <span id="han-part">
+      <span class="han-text">H</span>
+      <span class="han-text">A</span>
+      <span class="han-text">N</span>
+    </span>
   </div>
+</div>
+
+ 
 
   <!-- Keranjang di kanan -->
   <div class="absolute right-4 top-1/2 -translate-y-1/2 flex items-center space-x-4">
     <a href="checkout.html" class="relative text-3xl hover:text-gray-300 hover:scale-110 transition" aria-label="Shopping cart">
       <i class="ri-shopping-cart-line"></i>
-      <span id="cart-count" class="absolute -top-2 -right-2 bg-blue-600 text-xs rounded-full w-5 h-5 flex items-center justify-center font-semibold">0</span>
+      <span id="cart-count" class="absolute -top-2 -right-2 bg-red-600 text-xs rounded-full w-5 h-5 flex items-center justify-center font-semibold">0</span>
     </a>
   </div>
 </nav>
@@ -49,72 +57,67 @@
 <!-- Modal Login dan Register -->
 
 
-<div id="loginModal" class="fixed inset-0 hidden items-center justify-center bg-black bg-opacity-20 backdrop-blur-sm z-50">
-  <div class="bg-black bg-opacity-60 backdrop-blur-lg border border-white/90 ring-1 ring-black/90 rounded-3xl p-8 w-full max-w-sm shadow-4xl text-white font-sans">
-    <h2 id="modalTitle" class="text-3xl font-semibold mb-9 text-center">Login</h2>
+<!-- MODAL LOGIN/REGISTER -->
+<div id="loginModal" class="fixed inset-0 hidden items-center justify-center bg-black bg-opacity-60 backdrop-blur-sm z-50">
+  <div class="bg-black bg-opacity-10 backdrop-blur-lg border border-black/10 ring-1 ring-white/90 rounded-3xl p-8 w-10px max-w-md shadow-4xl text-white font-sans">
+    
+<h2 id="form-title" class="text-3xl font-semibold mb-6 text-center text-red-600">DZULFIKAR</h2>
 
-    <form id="authForm" class="space-y-4">
-      <!-- Username -->
-      <div class="relative input-container">
-        <i class="ri-user-line absolute left-8 top-1/2 -translate-y-1/2 text-white/70 text-xl pointer-events-none"></i>
-        <input
-          type="text"
-          id="username"
-          placeholder="Username"
-          class="w-full pl-12 pr-4 py-3 rounded-xl bg-black bg-opacity-20 border border-white/30 
-                 text-white placeholder-white/60 focus:outline-none focus:bg-opacity-30 focus:border-blue-400"
-          required
-        />
+    <p class="subtitle text-center mb-6">
+      <span id="typed"></span><span id="cursor">|</span>
+    </p>
+
+    <!-- FORM LOGIN -->
+    <form id="loginForm" class="active space-y-4" autocomplete="off" novalidate>
+      <div class="relative">
+        <i class="ri-user-line absolute left-4 top-1/2 -translate-y-1/2 text-white/60"></i>
+        <input type="text" name="username" placeholder="Username" class="pl-10 pr-4 py-3 w-full bg-black bg-opacity-20 border border-white/30 rounded-xl text-white placeholder-white/60" required />
       </div>
-
-      <!-- Email -->
-
-<div class="relative input-container hidden" id="emailContainer">
-  <i class="ri-mail-line absolute left-8 top-1/2 -translate-y-1/2 text-white/70 text-xl pointer-events-none"></i>
-  <input
-    type="email"
-    id="email"
-    placeholder="Email"
-    class="w-full pl-12 pr-4 py-3 rounded-xl mb-13 bg-black bg-opacity-20 border border-white/30
-           text-white placeholder-white/60 focus:outline-none focus:bg-opacity-30 focus:border-blue-400"
-  />
-</div>
-
-      <!-- Password -->
-      <div class="relative input-container">
-        <i class="ri-lock-line absolute left-8 top-1/2 -translate-y-1/2 text-white/70 text-xl pointer-events-none"></i>
-        <input
-          type="password"
-          id="password"
-          placeholder="Password"
-          class="w-full pl-12 pr-12 py-3 rounded-xl bg-black bg-opacity-20 border border-white/30 
-                 text-white placeholder-white/60 focus:outline-none focus:bg-opacity-30 focus:border-blue-400"
-          required
-        />
-        <button
-          type="button"
-          id="togglePassword"
-          class="absolute right-8 top-1/2 -translate-y-1/2 text-white/70 hover:text-white focus:outline-none"
-          aria-label="Toggle Password Visibility"
-        >
-          <i id="eyeIcon" class="ri-eye-line text-xl"></i>
-        </button>
-</div>
-
-
-
-<div class="flex justify-between items-center">
-  <button
-    type="submit"
-    id="submitBtn"
-    class="px-6 py-3 rounded-xl bg-blue-400 bg-opacity-80 hover:bg-blue-700 transition font-semibold flex items-center justify-center gap-2 text-white"
-  >
-    <i class="ri-login-box-line"></i><span>Login</span>
-  </button>
-        <button type="button" id="toggleBtn"
-          class="underline text-sm text-white hover:text-blue-400 transition">Register</button>
+      <div class="relative">
+        <i class="ri-lock-password-line absolute left-4 top-1/2 -translate-y-1/2 text-white/60"></i>
+        <input type="password" id="loginPassword" name="password" placeholder="Password" class="pl-10 pr-10 py-3 w-full bg-black bg-opacity-20 border border-white/30 rounded-xl text-white placeholder-white/60" required />
+        <i class="ri-eye-line absolute right-4 top-1/2 -translate-y-1/2 text-white/60 cursor-pointer" onclick="togglePassword('loginPassword')"></i>
       </div>
+      <button type="submit" class="w-full py-3 bg-blue-500 rounded-xl hover:bg-blue-600 transition">MASUK</button>
+
+
     </form>
+
+    <!-- FORM REGISTER -->
+    <form id="registerForm" class="active" autocomplete="off" novalidate>
+      <div class="relative">
+        <i class="ri-user-line absolute left-4 top-1/2 -translate-y-1/2 text-white/60"></i>
+        <input type="text" name="username" placeholder="Username" class="pl-10 pr-4 py-3 w-full bg-black bg-opacity-20 border border-white/30 rounded-xl text-white placeholder-white/60" required />
+      </div>
+      <div class="relative">
+        <i class="ri-mail-line absolute left-4 top-1/2 -translate-y-1/2 text-white/60"></i>
+        <input type="email" name="email" placeholder="Email" class="pl-10 pr-4 py-3 w-full bg-black bg-opacity-20 border border-white/30 rounded-xl text-white placeholder-white/60" required />
+      </div>
+      <div class="relative">
+        <i class="ri-lock-password-line absolute left-4 top-1/2 -translate-y-1/2 text-white/60"></i>
+        <input type="password" id="regPassword" name="password" placeholder="Password" class="pl-10 pr-10 py-3 w-full bg-black bg-opacity-20 border border-white/30 rounded-xl text-white placeholder-white/60" required />
+        <i class="ri-eye-line absolute right-4 top-1/2 -translate-y-1/2 text-white/60 cursor-pointer" onclick="togglePassword('regPassword')"></i>
+      </div>
+      <div class="relative">
+        <i class="ri-lock-password-line absolute left-4 top-1/2 -translate-y-1/2 text-white/60"></i>
+        <input type="password" id="regConfirm" name="confirmPassword" placeholder="Confirm Password" class="pl-10 pr-10 py-3 w-full bg-black bg-opacity-20 border border-white/30 rounded-xl text-white placeholder-white/60" required />
+        <i class="ri-eye-line absolute right-4 top-1/2 -translate-y-1/2 text-white/60 cursor-pointer" onclick="togglePassword('regConfirm')"></i>
+      </div>
+      <button type="submit" class="w-full py-3 bg-green-500 rounded-xl hover:bg-green-600 transition">DAFTAR</button>
+  
+    </form>
+
+<div class="social-icons">
+  <a href="https://www.facebook.com/rayhanganteng.rayhanganteng.90?_rdc=1&_rdr" class="facebook" target="_blank" aria-label="Facebook">
+    <i class="ri-facebook-line"></i>
+  </a>
+  <a href="https://instagram.com/rhanray_" class="instagram" target="_blank" aria-label="Instagram">
+    <i class="ri-instagram-line"></i>
+  </a>
+  <a href="https://wa.me/6282197770219" class="whatsapp" target="_blank" aria-label="WhatsApp">
+    <i class="ri-whatsapp-line"></i>
+  </a>
+</div>
 
 <div class="mt-4">
   <button
